gcc/testsuite/g++.old-deja/g++.mike/err3.C
// { dg-do assemble  }
class cb {
};

class cc {
public:
  cc()
    : cb() {		// { dg-error "" } 
  }
};
